<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!-- 时间过滤 -->
    <Button
        android:id="@+id/filter_head_select_date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:textSize="@dimen/text_size"
        android:hint="@string/select_date"
        android:singleLine="true"/>

    <!-- 类型过滤 -->
    <Button
        android:id="@+id/filter_head_select_type"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:textSize="@dimen/text_size"
        android:hint="@string/select_type"
        android:singleLine="true"/>

    <!-- 子类型和备注过滤 -->
    <Button
        android:id="@+id/filter_head_select_text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:textSize="@dimen/text_size"
        android:hint="@string/select_text"
        android:singleLine="true"/>

</LinearLayout>
