<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">

    <AutoCompleteTextView
        android:id="@+id/dialog_searchtext_edittext_searchtext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:inputType="text"
        android:textSize="@dimen/text_size"
        android:gravity="center"
        android:background="@color/text_back_color"
        android:textColor="@color/default_text_color"
        android:hint="@string/subtype_remark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <Button
            android:id="@+id/dialog_searchtext_button_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size"
            android:text="@string/cancel"
            android:gravity="center_horizontal|center_vertical"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/dialog_searchtext_button_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size"
            android:text="@string/ok"
            android:gravity="center_horizontal|center_vertical"
            android:layout_weight="1"/>
    </LinearLayout>


</LinearLayout>
