<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--正在加载文字-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/activity_positionrecord_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/blank_size"
                android:textSize="@dimen/text_size"
                android:textColor="@color/green_text"
                android:hint="@string/speed"
                android:layout_weight="1"/>
            <Button android:id="@+id/activity_positionrecord_speedunit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/blank_size"
                android:textSize="@dimen/text_size"
                android:textColor="@color/default_text_color"
                android:hint="@string/speed_ms"
                android:layout_weight="1"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/activity_positionrecord_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/blank_size"
                android:textSize="@dimen/text_size"
                android:textColor="@color/green_text"
                android:layout_weight="1"
                android:hint="@string/longitude"/>

            <TextView
                android:id="@+id/activity_positionrecord_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/blank_size"
                android:textSize="@dimen/text_size"
                android:textColor="@color/green_text"
                android:layout_weight="1"
                android:hint="@string/latitude"/>
        </LinearLayout>
    </LinearLayout>

    <ListView 
        android:id="@+id/activity_positionrecord_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center_horizontal"
        android:fastScrollEnabled="false"
        android:divider="@color/selected_text"
        android:dividerHeight="1px" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/activity_positionrecord_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/blank_size"
            android:text="@string/ok"
            android:textColor="@color/default_text_color"
            android:textSize="@dimen/text_size"
            android:background="@drawable/button_normal_selector"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/activity_positionrecord_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/blank_size"
            android:text="@string/test"
            android:textColor="@color/default_text_color"
            android:textSize="@dimen/text_size"
            android:background="@drawable/button_normal_selector"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>
        <!-- style="?android:attr/buttonStyle" -->
    </LinearLayout>

</LinearLayout>
